fix: improve CORS